--- a/ToDoStyles.css
+++ b/ToDoStyles.css
@@ -4,6 +4,7 @@
   --dark-grey: #0a0a23;
   --yellow: #f1be32;
   --golden-yellow: #feac32;
+  --dark-red: #850000;
 }
 
 *,
@@ -28,13 +29,15 @@ main {
 h1 {
   color: var(--light-grey);
   margin: 20px 0 40px 0;
+  font-family: courier new;
+  font-style: italic;
 }
 
 .todo-app {
   background-color: var(--white);
   width: 300px;
   height: 350px;
-  border: 5px solid var(--yellow);
+  border: 5px solid var(--dark-red);
   border-radius: 8px;
   padding: 15px;
   position: relative;
